# GitHubStats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/GitHubStats/: __main__.py
src/GitHubStats/core/: config.py  github_api.py  utils.py
src/GitHubStats/gui/: app.py
